--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
         "semi": 2
     },
     "env": {
-        "browser": true
+        "browser": true,
+        "es6": true
     },
     "globals": {
         "Vue": false
